--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,16 @@ body {
   margin: 0;
 }
 
+img {
+  width: 50px;
+  height: auto;
+  border-radius: 24px;
+}
+
 .container {
   height: 100vh;
   display: grid;
-  grid-template-columns: 300px 3fr 300px;
+  grid-template-columns: 220px 3fr 300px;
   grid-template-rows: 300px 1fr;
 }
 
