--- a/styles.css
+++ b/styles.css
@@ -9,32 +9,108 @@ body {
 }
 
 img {
-  width: 50px;
+  width: 60px;
   height: auto;
-  border-radius: 24px;
+  border-radius: 32px;
+}
+
+h1 {
+  margin: 0;
 }
 
 .container {
   height: 100vh;
   display: grid;
   grid-template-columns: 220px 3fr 300px;
-  grid-template-rows: 300px 1fr;
+  grid-template-rows: 250px 1fr;
 }
 
 header {
-  background-color: #22d3ee;
+  background-color: white;
+  padding: 1rem;
   grid-column: 2 / -1;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  box-shadow: 10px 5px 5px black;
 }
 
+.search-form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 8px;
+}
+
+#user-search {
+  height: 2.5rem;
+  font-size: 1.5rem;
+  border-radius: 16px;
+}
+
+#user-search:hover,
+#user-search:focus {
+  border: 4px solid #6366f1;
+}
+
+.profile {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.greeting {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  justify-content: start;
+  align-items: center;
+  gap: 2rem;
+}
+
+.greeting img {
+  width: 120px;
+  border-radius: 64px;
+}
+
+.user-function {
+  display: grid;
+  align-items: center;
+}
+.user-function ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+}
+
+li button {
+  padding: 1rem 2rem;
+  border-radius: 32px;
+  background-color: #6366f1;
+  color: white;
+  font-size: 1rem;
+  border: none;
+}
+
+li button:hover {
+  background-color: #4f46e5;
+}
+
+li button:active {
+  background-color: #4f46e5;
+  box-shadow: 0 4px #1e1b4b;
+  transform: translateY(2px);
+}
 .dashboard {
-  background-color: #67e8f9;
+  background-color: #6366f1;
   grid-row: 1 / -1;
 }
 
 main {
-  background-color: #ecfeff;
+  background-color: #c7d2fe;
 }
 
 aside {
-  background-color: #a5f3fc;
+  background-color: #c7d2fe;
 }
