--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ header {
   box-shadow: 0 0 5px #719ece;
 }
 
-.profile {
+.user-profile {
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
@@ -107,8 +107,27 @@ li button:active {
 }
 .dashboard {
   background-color: #6366f1;
+  padding: 1rem;
   grid-row: 1 / -1;
   z-index: 2;
+  display: grid;
+  grid-auto-rows: min-content;
+  gap: 8px;
+}
+
+.dashboard img {
+  width: 40px;
+  border-radius: 0;
+  filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(219deg)
+    brightness(103%) contrast(101%);
+}
+
+.dashboard div {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 4px;
+  color: white;
 }
 
 main {
