--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,11 @@ header {
 .user-function ul {
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem 0 0;
+  gap: 2.5rem;
 }
 
 li button {
